# hello-simd-wasm

./: .gitignore  .prettierignore  Cargo.toml  README.md  build.sh  eslint.config.js  package.json  pnpm-lock.yaml  renovate.json  rust-toolchain.toml  vitest.config.ts
.cargo/: config.toml
.github/actions/binaryen/: action.yml
.github/actions/restore/: action.yml
.github/workflows/: check.yml
src/: disposable.ts  dispose.ts  index.ts  lib.rs  limits.ts  main.test.ts  main.ts  result.ts  utils.ts
wasm/: lib.rs
