cargo-features = ["panic-immediate-abort"]

[package]
name = "hello-simd-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "wasm/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
panic = "immediate-abort"

[profile.dev]
opt-level = 1
codegen-units = 1
